modified:   PiZero/agent.py 	new file:   PiZero/camera_monitor.py 	modified:   PiZero/config.json.example 	new file:   PiZero/gpio_sensors.py 	new file:   PiZero/intruder_detection.py

--- a/PiZero/config.json.example
+++ b/PiZero/config.json.example
@@ -3,5 +3,6 @@
   "broker_port": 1883,
   "agent_id": "AUTO",
   "telemetry_interval": 10,
-  "log_level": "INFO"
+  "log_level": "INFO",
+  "command_timeout": 30
 }
